Add globals to eslint configuration

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "scripts": {
     "test": "yarn mocha",
     "coverage": "nyc mocha",
-    "lint": "eslint test lib example"
+    "lint": "eslint test lib"
   }
 }
