--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.0.4",
     "eslint": "^6.0.1",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
@@ -13,8 +14,9 @@
   },
   "dependencies": {},
   "scripts": {
-    "test": "yarn mocha",
+    "test": "mocha",
+    "lint": "eslint test lib",
     "coverage": "nyc mocha",
-    "lint": "eslint test lib"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   }
 }
